--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:hover{
 
   .timer {
     font-size: 4em; /* Font size for numbers */
-    color: rgb(7, 7, 227);
+    color: black;
   }
 
   span {
