--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
 body{
-  background-color:#00CEC8;
+  background-color:black;
   z-index: -1;
 }
 a:hover{
-  background-color: deepskyblue;
+  background-color: #00CEC8;
 }
   .counter-container {
     background:  #57F287;
