--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
   z-index: -1;
 }
 a:hover{
-  background-color:black ;
+  background-color:#57F287 ;
 }
   .counter-container {
     background:  #57F287;
