--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a:hover{
                 <div class="mx-auto p-2" style="width: 200px;">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"style="color:  #57F287;">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#"style="color:  black;">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="_self">Services</a>
@@ -151,8 +151,8 @@ a:hover{
       <br></br>
     <section id="services"class="container1">
       <div class="container justify-content-center" style="display: flex; align-items: center;">
-        <p class="text-center h2 fw-bolder" style="color: rgb(7, 7, 227); margin-right: 5px;">Our Top</p>
-        <p class="text-center h2 fw-bolder"style="color: rgb(7, 7, 227);">Services</p>
+        <p class="text-center h2 fw-bolder" style="color: black; margin-right: 5px;">Our Top</p>
+        <p class="text-center h2 fw-bolder"style="color:  black;">Services</p>
     </div>
     <br></br>
     <div class="container px-4 text-center">
@@ -197,8 +197,8 @@ a:hover{
         <br></br>
         <section class="container1">
           <div class="container justify-content-center" style="display: flex;align-items: center;">
-            <p class="text-center h2 fw-bolder" style="color:rgb(7, 7, 227); margin-right: 5px;">Our top</p>
-            <p class="text-center h2 fw-bolder"style="color: rgb(7, 7, 227);">Specialities</p>
+            <p class="text-center h2 fw-bolder" style="color: black; margin-right: 5px;">Our top</p>
+            <p class="text-center h2 fw-bolder"style="color: black;">Specialities</p>
             </div>
             <br></br>
         <div class="container px-4 text-center">
@@ -250,7 +250,7 @@ a:hover{
     <br></br>
     <section class="container1">
       <div class="container">
-      <p class="text-center h2 fw-bolder"style="color: rgb(7, 7, 227); margin-right: 5px;">In Quest of:</p>
+      <p class="text-center h2 fw-bolder"style="color: black; margin-right: 5px;">In Quest of:</p>
       </div>
       <br></br>
       <div class="container px-4 text-center">
@@ -274,8 +274,8 @@ a:hover{
     <br></br>
     <section id="doctors" class="container1">
       <div class="container justify-content-center" style="display: flex;align-items: center;">
-        <p class="text-center h2 fw-bolder" style="color: rgb(7, 7, 227); margin-right: 5px;">Our Best</p>
-        <p class="text-center h2 fw-bolder"style="color: rgb(7, 7, 227);">Physicians</p>
+        <p class="text-center h2 fw-bolder" style="color:  black; margin-right: 5px;">Our Best</p>
+        <p class="text-center h2 fw-bolder"style="color:  black;">Physicians</p>
         </div>
       <br></br>
       <div class="container px-4 text-start">
@@ -323,8 +323,8 @@ a:hover{
     <br></br>
     <section class="container1">
       <div class="container justify-content-center" style="display: flex; align-items: center;">
-        <p class="text-center h2 fw-bolder" style="color: rgb(7, 7, 227); margin-right: 5px;">Simple Steps to</p>
-        <p class="text-center h2 fw-bolder"style="color: rgb(7, 7, 227);">Get Your Solution</p>
+        <p class="text-center h2 fw-bolder" style="color: black; margin-right: 5px;">Simple Steps to</p>
+        <p class="text-center h2 fw-bolder"style="color:  black;">Get Your Solution</p>
     </div>
     <br></br>
     <div class="container px-4 text-center">
@@ -397,8 +397,8 @@ a:hover{
     <br></br>
     <section class="container1">
       <div class="container justify-content-center" style="display: flex;align-items: center;">
-        <p class="text-center h2 fw-bolder" style="color: rgb(7, 7, 227); margin-right: 5px;">What People Say</p>
-        <p class="text-center h2 fw-bolder"style="color:rgb(7, 7, 227)">About Us</p>
+        <p class="text-center h2 fw-bolder" style="color:  black; margin-right: 5px;">Testimonials</p>
+        <p class="text-center h2 fw-bolder"style="color: black">About Us</p>
         </div>
     <br></br>
     <div class="container px-4 text-center">
@@ -408,7 +408,7 @@ a:hover{
           <div class="container" >
           <img src="./pp1.jpg" class="rounded float-start img-fluid"  style="height: 100px;width: 100px;">
           <h1 class="display-4 fw-bolder" style="font-family:serif">Millie</h1>
-          <p class="text-center h2 fw-light">I really liked their services,</p>
+          <p class="text-center h2 fw-light">The acnes on my face are finally fading away,</p>
           </div>
          </div>
         </div>
@@ -417,7 +417,7 @@ a:hover{
             <div class="container" >
               <img src="./pp2.webp" class="rounded float-start img-fluid"  style="height: 100px;width: 100px;">
               <h1 class="display-4 fw-bolder" style="font-family:serif">Merlin</h1>
-          <p class="text-center h2 fw-light">I got the best services;),</p>
+          <p class="text-center h2 fw-light">My son is now cancer free;),</p>
               </div>
               
           </div>
