--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@ a:hover{
         <div class="col">
          <div class="p-3" style="background-color:  #57F287; border: gray;margin-right: 5px;height: 150px;width: 1220px;">
           <div style="display: flex; padding: 40px;">
-          <p class="h2 fw-bolder" style="margin-right: 10px;"color:rgb(7, 7, 227)">Registration</p>
-          <p class="h2 fw-bolder" style="color: rgb(7, 7, 227);margin-right: 500px;">made easy</p>
+          <p class="h2 fw-bolder" style="margin-right: 10px;"color:black;">Registration</p>
+          <p class="h2 fw-bolder" style="color: black;margin-right: 500px;">made easy</p>
           <button type="button" style="width: 150px; height: 50px; font-size:medium;color:white; background-color: black;">Submit Here</button>
           </div>
          </div>
